// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NutritionPlanList navigates to detail page when "Xem" button is clicked 1`] = `
<div>
  <div
    class="container mx-auto p-6 bg-white shadow-lg rounded-lg my-8"
  >
    <h1
      class="text-4xl font-bold text-center text-gray-800 mb-8"
    >
      Quản lý Chế độ Dinh dưỡng
    </h1>
    <div
      class="flex justify-end mb-6"
    >
      <a
        class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md transition duration-300"
        data-discover="true"
        href="/nutrition-plans/new"
      >
        Tạo mới Chế độ Dinh dưỡng
      </a>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="min-w-full bg-white border border-gray-200"
      >
        <thead>
          <tr>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Mã
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Tên Chế độ
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Mô tả
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Bắt đầu
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Kết thúc
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Mục tiêu
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Hành động
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="border-b border-gray-200 hover:bg-gray-50"
          >
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              CD001
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Chế độ giảm cân cấp tốc
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Giảm 5kg trong 1 tháng
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              2025-01-01
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              2025-01-31
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Giảm cân
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700 flex space-x-2"
            >
              <a
                class="bg-green-500 hover:bg-green-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
                data-discover="true"
                href="/nutrition-plans/CD001"
              >
                Xem
              </a>
              <a
                class="bg-yellow-500 hover:bg-yellow-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
                data-discover="true"
                href="/nutrition-plans/CD001/edit"
              >
                Sửa
              </a>
              <button
                class="bg-red-500 hover:bg-red-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
              >
                Xóa
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-gray-200 hover:bg-gray-50"
          >
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              CD002
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Chế độ tăng cơ
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Tăng 2kg cơ trong 2 tháng
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              2025-02-01
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              2025-03-31
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Tăng cơ
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700 flex space-x-2"
            >
              <a
                class="bg-green-500 hover:bg-green-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
                data-discover="true"
                href="/nutrition-plans/CD002"
              >
                Xem
              </a>
              <a
                class="bg-yellow-500 hover:bg-yellow-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
                data-discover="true"
                href="/nutrition-plans/CD002/edit"
              >
                Sửa
              </a>
              <button
                class="bg-red-500 hover:bg-red-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
              >
                Xóa
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`NutritionPlanList navigates to edit page when "Sửa" button is clicked 1`] = `
<div>
  <div
    class="container mx-auto p-6 bg-white shadow-lg rounded-lg my-8"
  >
    <h1
      class="text-4xl font-bold text-center text-gray-800 mb-8"
    >
      Quản lý Chế độ Dinh dưỡng
    </h1>
    <div
      class="flex justify-end mb-6"
    >
      <a
        class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md transition duration-300"
        data-discover="true"
        href="/nutrition-plans/new"
      >
        Tạo mới Chế độ Dinh dưỡng
      </a>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="min-w-full bg-white border border-gray-200"
      >
        <thead>
          <tr>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Mã
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Tên Chế độ
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Mô tả
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Bắt đầu
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Kết thúc
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Mục tiêu
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Hành động
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="border-b border-gray-200 hover:bg-gray-50"
          >
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              CD001
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Chế độ giảm cân cấp tốc
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Giảm 5kg trong 1 tháng
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              2025-01-01
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              2025-01-31
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Giảm cân
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700 flex space-x-2"
            >
              <a
                class="bg-green-500 hover:bg-green-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
                data-discover="true"
                href="/nutrition-plans/CD001"
              >
                Xem
              </a>
              <a
                class="bg-yellow-500 hover:bg-yellow-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
                data-discover="true"
                href="/nutrition-plans/CD001/edit"
              >
                Sửa
              </a>
              <button
                class="bg-red-500 hover:bg-red-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
              >
                Xóa
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-gray-200 hover:bg-gray-50"
          >
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              CD002
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Chế độ tăng cơ
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Tăng 2kg cơ trong 2 tháng
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              2025-02-01
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              2025-03-31
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700"
            >
              Tăng cơ
            </td>
            <td
              class="py-3 px-4 text-sm text-gray-700 flex space-x-2"
            >
              <a
                class="bg-green-500 hover:bg-green-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
                data-discover="true"
                href="/nutrition-plans/CD002"
              >
                Xem
              </a>
              <a
                class="bg-yellow-500 hover:bg-yellow-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
                data-discover="true"
                href="/nutrition-plans/CD002/edit"
              >
                Sửa
              </a>
              <button
                class="bg-red-500 hover:bg-red-600 text-white py-1 px-3 rounded-md text-xs transition duration-300"
              >
                Xóa
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`NutritionPlanList navigates to new plan page when "Tạo mới" button is clicked 1`] = `
<div>
  <div
    class="container mx-auto p-6 bg-white shadow-lg rounded-lg my-8"
  >
    <h1
      class="text-4xl font-bold text-center text-gray-800 mb-8"
    >
      Quản lý Chế độ Dinh dưỡng
    </h1>
    <div
      class="flex justify-end mb-6"
    >
      <a
        class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md transition duration-300"
        data-discover="true"
        href="/nutrition-plans/new"
      >
        Tạo mới Chế độ Dinh dưỡng
      </a>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="min-w-full bg-white border border-gray-200"
      >
        <thead>
          <tr>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Mã
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Tên Chế độ
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Mô tả
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Bắt đầu
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Kết thúc
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Mục tiêu
            </th>
            <th
              class="py-3 px-4 bg-gray-100 text-left text-sm font-semibold text-gray-600 uppercase tracking-wider"
            >
              Hành động
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</div>
`;
